--- a/cdcommon/src/main/AndroidManifest.xml
+++ b/cdcommon/src/main/AndroidManifest.xml
@@ -12,16 +12,16 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <!--用于进行网络定位-->
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
-    <!--用于访问GPS定位-->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
-    <!--用于访问wifi网络信息，wifi信息会用于进行网络定位-->
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
-    <!--用于获取wifi的获取权限，wifi信息会用来进行网络定位-->
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"></uses-permission>
-    <!--用于申请获取蓝牙信息进行室内定位-->
-    <uses-permission android:name="android.permission.BLUETOOTH"></uses-permission>
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"></uses-permission>
+    <!--<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>-->
+    <!--&lt;!&ndash;用于访问GPS定位&ndash;&gt;-->
+    <!--<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>-->
+    <!--&lt;!&ndash;用于访问wifi网络信息，wifi信息会用于进行网络定位&ndash;&gt;-->
+    <!--<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>-->
+    <!--&lt;!&ndash;用于获取wifi的获取权限，wifi信息会用来进行网络定位&ndash;&gt;-->
+    <!--<uses-permission android:name="android.permission.CHANGE_WIFI_STATE"></uses-permission>-->
+    <!--&lt;!&ndash;用于申请获取蓝牙信息进行室内定位&ndash;&gt;-->
+    <!--<uses-permission android:name="android.permission.BLUETOOTH"></uses-permission>-->
+    <!--<uses-permission android:name="android.permission.BLUETOOTH_ADMIN"></uses-permission>-->
 
 
     <application>
