--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,12 +70,19 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
 
+        <!--资讯详情-->
+        <activity
+            android:name=".module.message.MessageDetailsActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
+
         <!-- 微信分享回调 -->
         <activity
             android:name="wxapi.WXEntryActivity"
             android:exported="true"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
+
 
     </application>
 
