新增 行情自选

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -94,6 +94,12 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
 
+        <!--添加行情自选-->
+        <activity
+            android:name=".module.market.AddMarketActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
+
         <!-- 微信分享回调 -->
         <activity
             android:name="wxapi.WXEntryActivity"
