--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -100,6 +100,12 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
 
+        <!--币吧搜索-->
+        <activity
+            android:name=".module.coin_bbs.search.SearchCoinBBSActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
+
         <!-- 微信分享回调 -->
         <activity
             android:name="wxapi.WXEntryActivity"
