--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,7 +66,7 @@
             android:windowSoftInputMode="adjustPan" />
         <!--我的评论-->
         <activity
-            android:name=".module.user.MyCommentsActivity"
+            android:name=".module.user.MyMessageCommentsActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
 
@@ -109,6 +109,18 @@
         <!--币吧回复详情-->
         <activity
             android:name=".module.coin_bbs.BBSCommentDetailsActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
+
+        <!--我的币吧回复-->
+        <activity
+            android:name=".module.user.MyCoinBBSCommentsActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
+        <!--分享-->
+        <activity
+            android:name=".module.user.ShareActivity"
+            android:theme="@style/ActivityDialogStyleBottom"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
 
