新增 我的--圈子评论

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ android {
                     outputFileName = "_${defaultConfig.versionName}_${releaseTime()}.apk"
                 }
             }
+            signingConfig signingConfigs.config
         }
         debug {
             signingConfig signingConfigs.config
