--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,11 @@
             android:name=".module.coin_bbs.CoinBBSDetailsActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
+        <!--币吧详情 进入-->
+        <activity
+            android:name=".module.coin_bbs.CoinBBSDetailsIntoActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
 
         <!--登录-->
         <activity
@@ -120,8 +125,8 @@
         <!--分享-->
         <activity
             android:name=".module.user.ShareActivity"
-            android:theme="@style/ActivityDialogStyleBottom"
             android:screenOrientation="portrait"
+            android:theme="@style/ActivityDialogStyleBottom"
             android:windowSoftInputMode="adjustPan" />
 
         <!-- 微信分享回调 -->
