--- a/cdcommon/build.gradle
+++ b/cdcommon/build.gradle
@@ -42,6 +42,7 @@ android {
 
         api 'com.android.support:design:26.1.0'
         api 'com.android.support:appcompat-v7:26.1.0'
+        api 'com.android.support:cardview-v7:26.1.0'
 
         //路由
         //arouter
