--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,17 +15,17 @@ android {
             }
         }
 
-//        ndk {
-//            选择要添加的对应cpu类型的.so库。
-//            abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a','x86'
-//             还可以添加 'x86', 'x86_64', 'mips', 'mips64'
-//        }
-//
-//        manifestPlaceholders = [
-//                JPUSH_PKGNAME : rootProject.ext.applicationId,
-//                JPUSH_APPKEY : "bfb492cb1bd1c84633b92614", //JPush上注册的包名对应的appkey.
-//                JPUSH_CHANNEL : "developer-default", //暂时填写默认值即可.
-//        ]
+        ndk {
+            // 选择要添加的对应cpu类型的.so库。
+            abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a','x86'
+            // 还可以添加 'x86', 'x86_64', 'mips', 'mips64'
+        }
+
+        manifestPlaceholders = [
+                JPUSH_PKGNAME : rootProject.ext.applicationId,
+                JPUSH_APPKEY : "bfb492cb1bd1c84633b92614", //JPush上注册的包名对应的appkey.
+                JPUSH_CHANNEL : "developer-default", //暂时填写默认值即可.
+        ]
 
     }
 
@@ -86,6 +86,6 @@ dependencies {
     api project(':cdcommon')
     implementation files('libs/open_sdk_r5990_lite.jar')
     //极光推送
-//    compile 'cn.jiguang.sdk:jpush:3.1.1'  //
-//    compile 'cn.jiguang.sdk:jcore:1.1.9'  //
+    compile 'cn.jiguang.sdk:jpush:3.1.1'  //
+    compile 'cn.jiguang.sdk:jcore:1.1.9'  //
 }
